# geofabrik-mock-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
openspec/changes/geofabrik-mock-server/: .openspec.yaml  design.md  proposal.md  tasks.md
recipe/: build.sh  recipe.yaml
src/geofabrik_mock_server/: __init__.py  cli.py  regions.json
src/geofabrik_mock_server/commands/: add.py  download.py  remove.py  serve.py
src/geofabrik_mock_server/core/: geofabrik.py  manifest.py  server.py
tests/: test_geofabrik.py  test_manifest.py  test_server.py
