[project]
name = "geofabrik-mock-server"
version = "0.1.0"
description = "Geofabrik mock server"
requires-python = ">=3.10"
dependencies = ["click", "flask", "requests"]

[project.scripts]
gms = "geofabrik_mock_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geofabrik_mock_server"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"
click = "*"
flask = "*"
requests = "*"

[tool.pixi.pypi-dependencies]
geofabrik-mock-server = { path = ".", editable = true }
