[project]
name = "geofabrik-mock-server"
version = "0.1.0"
description = "Geofabrik mock server"
requires-python = ">=3.10"
dependencies = ["click", "flask", "requests"]

[project.scripts]
gms = "geofabrik_mock_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geofabrik_mock_server"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"
click = "*"
flask = "*"
requests = "*"

[tool.pixi.pypi-dependencies]
geofabrik-mock-server = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8"
ruff = ">=0.9"
mypy = ">=1"

[tool.pixi.feature.dev.pypi-dependencies]
types-requests = ">=2.31"
prek = ">=0.4"

[tool.pixi.feature.dev.tasks]
test      = "pytest tests/"
lint      = "prek run --all-files"
typecheck = "mypy src/"
check     = { depends-on = ["lint", "typecheck", "test"] }

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
